assets/styles/components/_forms.scss
// Search form
.search-form {
  @extend .form-inline;
}
.search-form label {
  font-weight: normal;
  @extend .form-group;
}
.search-form .search-field {
  @extend .form-control;
}
.search-form .search-submit {
  @extend .btn;
  @extend .btn-default;
}


input[type="submit"] {
	border:none;
	@include transition;
}

input[type="input"],
input[type="password"],
input[type="number"],
.frm_form_field input[type="input"] {
	border:2px solid $black;
	padding:10px;
}

//Formidable overwrites
.frm_style_formidable-style.with_frm_style .frm_repeat_sec {
	margin-bottom:20px !important;
}
.frm_icon_font.frm_plus_icon,
.frm_icon_font.frm_minus_icon {
	display:none !important;
}

.with_frm_style .frm_message {
	margin-top:35px;
	p {
		margin-top:0 !important;
		margin-bottom:0 !important;
	}
}

